# fulanghua_navigation

./: a.txt
bash_files/: hitz_nav.sh  house_turtlebot3.sh  navigation.sh  turtlebot3.sh
fulanghua_action/: CMakeLists.txt  package.xml
fulanghua_action/action/: special_move.action  test.action
fulanghua_action/launch/: aruco_test.launch  tf.launch
fulanghua_action/src/: adv_action_client.cpp  adv_action_server.cpp  aruco_align_action_server.cpp  aruco_detect_action_server.cpp  rotate_action_server.cpp
fulanghua_msg/: CMakeLists.txt  package.xml
fulanghua_msg/msg/: WpRobotStatus.msg
fulanghua_srvs/: CMakeLists.txt  package.xml
fulanghua_srvs/srv/: Pose.srv
fulanghua_waypoints_nav/: CMakeLists.txt  package.xml
fulanghua_waypoints_nav/launch/: hitz_nav.launch  nav.launch  navigation.launch  servers.launch  turtlebot3_huge_map_headless.launch  turtlebot3_navigation.launch  wp_manager.launch
fulanghua_waypoints_nav/param/: initial_pose.yaml
fulanghua_waypoints_nav/script/: ar_align_client.py
fulanghua_waypoints_nav/src/: adv_action_server.cpp  align_test_client.cpp  aruco_align_action_server.cpp  aruco_detect_action_server.cpp  battery_check_server.cpp  go1_high_command.cpp  go_straight_action_server.cpp  rotate_action_server.cpp  waypoints_nav.cpp  wp_robot_status_pub.cpp
fulanghua_waypoints_nav/voice/: main  main.cpp
fulanghua_waypoints_nav/worlds/: huge_map.world  huge_map.xml
launch/: nav.launch
